--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,13 @@
             <artifactId>selenide</artifactId>
             <version>6.7.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.2.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
